增加异常处理